<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/et_operator_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_a"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_operator_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_b"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="visible" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            app:layout_constraintEnd_toStartOf="@+id/btn_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/divide"
            app:layout_constraintEnd_toStartOf="@+id/btn_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_add"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/multiply"
            app:layout_constraintEnd_toStartOf="@+id/btn_subtract"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_divide"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/subtract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_multiply"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:text="@string/pow"
            app:layout_constraintStart_toEndOf="@id/btn_add"
            app:layout_constraintTop_toBottomOf="@id/btn_divide" />

        <Button
            android:id="@+id/btn_sqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:text="@string/radical"
            app:layout_constraintEnd_toEndOf="@+id/btn_multiply"
            app:layout_constraintTop_toTopOf="@+id/btn_multiply" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>